[tool.poetry]
name = "agentex"
version = "0.0.0"
description = ""
authors = ["Felix Su <felixs8696@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
typer = "^0.12.5"
questionary = "^2.0.1"
rich = "^13.9.2"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
python-on-whales = "^0.73.0"
pyyaml = "^6.0.2"
httpx = "^0.27.2"
jsonschema = "^4.23.0"
jsonref = "^1.1.0"
temporalio = "^1.8.0"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
agentex = "agentex.cli.commands.main:app"
